--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
+    "axios": "^0.18.0",
+    "material-ui": "^0.20.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.3.2",
     "rest": "^1.3.1",
     "webpack": "^1.12.2"
