--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-ui": "^0.20.0",
+    "prop-types": "^15.6.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.3.2",
+    "react-router-dom": "^4.2.2",
     "rest": "^1.3.1",
     "webpack": "^1.12.2"
   },
@@ -34,8 +36,11 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "eslint": "^4.19.0",
+    "eslint-plugin-import": "^2.9.0"
   }
 }
