--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
     "axios": "^0.18.0",
+    "material-auto-rotating-carousel": "^1.7.0",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.3.2",
     "react-router-dom": "^4.2.2",
+    "react-swipeable-views": "^0.12.13",
     "rest": "^1.3.1",
     "webpack": "^1.12.2"
   },
