--- a/package.json
+++ b/package.json
@@ -33,16 +33,21 @@
     "webpack": "^1.12.2"
   },
   "scripts": {
-    "watch": "webpack --watch -d"
+    "watch": "webpack --watch -d",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
     "eslint": "^4.19.0",
-    "eslint-plugin-import": "^2.9.0"
+    "eslint-plugin-import": "^2.9.0",
+    "jest": "^22.4.3"
   }
 }
