--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "watch": "webpack --watch -d",
-    "test": "jest"
+    "test": "jest --config jest.config.js"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -48,6 +48,7 @@
     "enzyme": "^3.3.0",
     "eslint": "^4.19.0",
     "eslint-plugin-import": "^2.9.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
