--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.3.2",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-swipeable-views": "^0.12.13",
     "rest": "^1.3.1",
